[[bin]]
name = 'node-template'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']

[package]
authors = ['Anonymous']
build = 'build.rs'
description = 'A new FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.node-template-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
