[[bin]]
name = 'statemint'

[package]
authors = ['Anonymous']
build = 'build.rs'
description = 'A new FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'statemint'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
derive_more = '0.15.0'
log = "0.4.13"
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.2.1"
async-trait = "0.1.42"
futures = "0.3.14"

# RPC related dependencies
jsonrpc-core = "15.1.0"

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.statemint-runtime]
path = '../runtime/statemint'
version = '2.0.0'

[dependencies.statemine-runtime]
path = '../runtime/statemine'
version = '2.0.0'

[dependencies.westmint-runtime]
path = '../runtime/westmint'
version = '2.0.0'

[dependencies.runtime-common]
path = '../runtime/common'
version = "0.8.30"

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '0.9.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-offchain]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-session]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

# Cumulus dependencies
[dependencies.cumulus-client-cli]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-client-consensus-common]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-client-consensus-aura]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-client-consensus-relay-chain]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-client-collator]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-client-network]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-primitives-parachain-inherent]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

[dependencies.cumulus-client-service]
git = 'https://github.com/paritytech/cumulus.git'
branch = "statemint"

# Polkadot dependencies
[dependencies.polkadot-primitives]
git = "https://github.com/paritytech/polkadot"
branch = "statemint"

[dependencies.polkadot-service]
git = "https://github.com/paritytech/polkadot"
branch = "statemint"

[dependencies.polkadot-cli]
git = "https://github.com/paritytech/polkadot"
branch = "statemint"

[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = "statemint"

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = "statemint"
version = '3.0.0'

[features]
default = []
runtime-benchmarks = [
	'polkadot-service/runtime-benchmarks',
	'statemint-runtime/runtime-benchmarks',
	'statemine-runtime/runtime-benchmarks',
	'westmint-runtime/runtime-benchmarks',
]
