[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ea50800227ad293321b0ee6da8263c4da173085d'
version = '4.0.0'

[package]
authors = ['Anonymous']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.template]
default-features = false
package = 'pallet-template'
path = '../pallets/template'

[features]
default = ['std']
runtime-benchmarks = [
    'sp-runtime/runtime-benchmarks',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'hex-literal',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'template/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'template/std',
]
