[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '4.0.0'

[package]
name = "runtime-common"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'


[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'


[dependencies.node-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'


[dependencies.polkadot-runtime-common]
git = 'https://github.com/paritytech/polkadot'
branch = 'apopiak-xcm-origin'
default-features = false


# Polkadot dependencies
[dependencies.polkadot-primitives]
git = 'https://github.com/paritytech/polkadot'
branch = 'apopiak-xcm-origin'
default-features = false

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'

[dev-dependencies]
serde = { version = "1.0.119" }

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'apopiak-xcm-origin'
version = '3.0.0'

[dependencies.xcm]
git = 'https://github.com/paritytech/polkadot'
branch = 'apopiak-xcm-origin'
default-features = false

# cumulus
[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'apopiak-xcm-origin'
default-features = false

[dependencies]
log = { version = "0.4.14", default-features = false }

[features]
default = ["std"]
std = [
	'codec/std',
	'sp-std/std',
	'sp-io/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'node-primitives/std',
	'polkadot-runtime-common/std',
	'polkadot-primitives/std',
	'log/std',
]
